<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_white_18"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_item_list"
        android:icon="@drawable/baseline_view_agenda_white_18"
        android:title="@string/nav_item_list"/>

    <item
        android:id="@+id/nav_transaction_list"
        android:icon="@drawable/baseline_attach_money_white_18"
        android:title="@string/nav_order_list"/>

    <item
        android:id="@+id/nav_graphs"
        android:icon="@drawable/baseline_show_chart_white_18"
        android:title="@string/nav_graphs"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_white_18"
        android:title="@string/nav_options"/>

</menu>