<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <!--<ImageView-->
            <!--android:id="@+id/ivPhoto"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:src="@android:drawable/ic_menu_upload" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_name"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="Apple" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_id">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10111111111111111111111" />
        </android.support.design.widget.TextInputLayout>
    <!-- Category -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLayoutSellPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sell_price"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSellPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="110"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLayoutBuyPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_buy_price"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etBuyPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notes">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MY notes"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/btnAdd"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/btnAdd"
                android:layout_toLeftOf="@id/btnAdd"
                android:text="@string/btnCancel" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
